--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -274,9 +274,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d445638c",
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ffeebfb7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🌍 Key Observations\n",
+      "• Benin shows the highest average GHI, suggesting stronger solar potential.\n",
+      "• Sierra Leone has the lowest GHI but the most stable (lowest variability).\n",
+      "• Togo’s DNI values fluctuate more, possibly due to weather or measurement gaps.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\"\"\n",
     "🌍 Key Observations\n",
